<resources>
    <string name="app_name">Stock Inventory</string>
    <string name="loginPrompt">Please Login:</string>
    <string name="userName">Username:</string>
    <string name="passWord">Password:</string>
    <string name="repassWord">Re Password:</string>
    <string name="loginButtonText">Login</string>
    <string name="createButtonText">Create Account</string>
    <string name="cancelButtonText">Cancel</string>
    <string name="submitButtonText">Submit</string>
    <string name="record">Add a Record</string>
    <string name="appbar_update">Update</string>
    <string name="appbar_logout">Logout</string>
    <string name="activity_itemID">Item ID:</string>
    <string name="activity_item">Item:</string>
    <string name="activity_quantity">Quantity:</string>
    <string name="add_activity_title">Add Item</string>
    <string name="inventory_activity_title">Inventory Items</string>
    <string name="remove_activity_title">Remove Item</string>
    <string name="update_activity_title">Update Item</string>
    <string name="permission_needed">Supplemental Feature</string>
    <string name="text_rationale">Stock Inventory can send text messages when inventory items are low.</string>
    <string name="permission_granted">Allow</string>
    <string name="permission_denied">Cancel</string>
    <string name="admin_phone_number">5555555555</string>
</resources>